Bug 497125 - Dolphin: Erratic renaming behavior when quickly using F2 (rename) followed by Delete on a selected file.
Summary: Dolphin: Erratic renaming behavior when quickly using F2 (rename) followed by...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-06 11:38 UTC by NitramO
Modified: 2025-07-24 09:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Visual demonstration of the issue. (458.11 KB, image/gif)
2024-12-06 11:38 UTC, NitramO
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NitramO 2024-12-06 11:38:20 UTC
Created attachment 176391 [details]
Visual demonstration of the issue.

### **Summary**  
Dolphin: Erratic renaming behavior when quickly using F2 (rename) followed by Delete on a selected file.

---

### **Description**

#### Steps to Reproduce  
1. Open Dolphin and navigate to a folder containing multiple files.  
2. Select a file.  
3. Quickly press **F2** (to rename the file), then immediately press **Delete** (to delete the file).  

#### Observed Result  
- The file is deleted as expected.  
- However, the rename text field appears on the next file in the list.  
- If the user clicks elsewhere (e.g., in empty space) to cancel the rename operation, the next file is renamed using the name of the deleted file.  

This issue can occasionally occur when using the mouse to rename and delete files in quick succession, but the behavior is consistently reproducible using the keyboard.  

#### Expected Result  
- Once a file is deleted, its name should not impact any other files.  
- The rename text field should not appear on any other files after the targeted file is deleted.  

#### Additional Information  
- This bug can lead to unintended renaming of files, causing confusion or data organization issues.  
- A video/gif demonstration of the issue is attached to this report for better understanding.

---

### **Software/OS Versions**  
- **Operating System:** KDE Neon 6.2  
- **KDE Plasma Version:** 6.2.3  
- **KDE Frameworks Version:** 6.8.0  
- **Qt Version:** 6.8.0  
- **Kernel Version:** 6.8.0-49-generic  

---

### **Additional Information**  
- **Environment:** Wayland session (but may also occur under X11).  
- Attached gif shows the issue occurring with keyboard input.  
- The bug is harder to reproduce using the mouse, but similar behavior has been observed in specific scenarios.
Comment 1 TraceyC 2024-12-12 19:51:18 UTC
I'm not able to reproduce this on Dolphin 24.08.3 on Solus or built from git-master, using keyboard only
I also tested on KDE Neon
When I press F2 and then Delete, the file name is erased, but the file is not deleted.

I clearly see the behavior you describe in the attachment, so this might be a race condition I am not able to trigger. I'll leave this open in case someone else is able to reproduce it.
Comment 2 NitramO 2024-12-14 00:34:32 UTC
(In reply to TraceyC from comment #1)
> I'm not able to reproduce this on Dolphin 24.08.3 on Solus or built from
> git-master, using keyboard only
> I also tested on KDE Neon
> When I press F2 and then Delete, the file name is erased, but the file is
> not deleted.
> 
> I clearly see the behavior you describe in the attachment, so this might be
> a race condition I am not able to trigger. I'll leave this open in case
> someone else is able to reproduce it.

Yes maybe because i'm an idiot... I said it in the wrong order, you need to press Delete first and immediately F2 not in the other way...
Comment 3 Akseli Lahtinen 2024-12-16 09:44:57 UTC
I can confirm the issue. You have to press delete and then immediately F2, and it leaves behind a ghost renaming field.

Also you're not an idiot, these happen to all of us! :)

dolphin 25.03.70
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.80
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.4-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 4 Bug Janitor Service 2025-06-11 11:15:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/989
Comment 5 Méven 2025-07-24 09:56:57 UTC
Git commit 94e08f04f4524fc4993b921a1ae1dd8cc6f8725c by Méven Car, on behalf of Akseli Lahtinen.
Committed on 24/07/2025 at 09:56.
Pushed by meven into branch 'master'.

KItemListView: Don't allow starting role editing when animation is running

If user presses delete and then F2 in very quick succession, the
inline rename field will get stuck in place, due to the animation
moving the actual item in different place.

To avoid any confusion, disallow starting role editing while any
animations are running.

M  +8    -1    src/kitemviews/kitemlistview.cpp

https://invent.kde.org/system/dolphin/-/commit/94e08f04f4524fc4993b921a1ae1dd8cc6f8725c